--- a/Mon chifoumi.html
+++ b/Mon chifoumi.html
@@ -77,110 +77,111 @@
 <div id="rejouer"> <button type="button" class="bouton" onclick="Initialisation();">Rejouer</button> </div>
 <script>
     function Initialisation() {
-        document.getElementById("rejouer").style.display="none";
+
         //Initialisation du bouton rejouer mais il n'apparait pas
-        document.getElementById("resultat-gauche").innerHTML="&nbsp;";
+
         //Prend le résultat de gauche avec un espace pour ecrire quel image choisit
-        document.getElementById("resultat-droite").innerHTML="&nbsp;";
+
         //Prend le résultat de droite avec un espace pour ecrire quel image choisit
-        ResultatJeux = ["rien", "rien"];
+
         //Résultat obtenue si le joueur de droite ET de gauche on choisi la même carte
-        chifoumi = ["pierre", "ciseau", "feuille"];
-        document.getElementById('image-gauche').style.pointerEvents = 'auto';
+
+        //Texte disant pierre, feuille, ciseau
+
         //Il va chercher une image pour le joueur de gauche dans la fonction joueur de gauche
-        document.getElementById('image-droite').style.pointerEvents = 'auto';
+
         //Il va chercher l'image du joueur de droite dans la fonction joueur de droite
-        document.getElementById("gauche").style.backgroundColor=document.getElementById("droite").style.backgroundColor="#C3C2C2";
+
         //Change la couleur du corps de la page que ça soit à droite ou à gauche
-        document.getElementById("titre").innerHTML="Chifoumi";
+
         //Recupere le titre de la page en locurence Chifoumi
-        document.getElementById("image-gauche").style.backgroundImage=document.getElementById("image-droite").style.backgroundImage="url(images-pfc/depart.jpg)";
+
         //Récupere le background de l'image de gauche et de l'image de droite
     }
 
     function joueurGauche() {
-        var ChoixAleatoire = Math.floor(Math.random()*chifoumi.length);
+
         //Variable qui fait un choix aléatoire (Math.random)
-        ResultatJeux[0] = chifoumi[ChoixAleatoire];
+
         //Résultat du choix aléatoire
-        document.getElementById("image-gauche").style.backgroundImage="url(images-pfc/"+chifoumi[ChoixAleatoire]+".jpg)";
+
         //Récupere l'image dans le dossier Image incluant le choix aléatoire au format jpg.
-        document.getElementById("gauche").style.backgroundColor="black";
+
         //On y applique le backgroundcolor noir
-        document.getElementById("resultat-gauche").innerHTML=chifoumi[ChoixAleatoire];
+
         //On affiche le résultat venant du choix aléatoire
-        document.getElementById('image-gauche').style.pointerEvents = 'none';
+
         //Désactivation de l'événement cliquer à gauche
         checkGame();
     }
 
     function joueurDroite() {
-        var ChoixAleatoire = Math.floor(Math.random()*chifoumi.length);
-        ResultatJeux[1]=chifoumi[ChoixAleatoire];
-        document.getElementById("image-droite").style.backgroundImage="url(images-pfc/"+chifoumi[ChoixAleatoire]+".jpg)";
-        document.getElementById("droite").style.backgroundColor="black";
-        document.getElementById("resultat-droite").innerHTML=chifoumi[ChoixAleatoire];
-        document.getElementById('image-droite').style.pointerEvents = 'none';
+
+
+
+
+
+
         checkGame();
 
     }
 
     function checkGame() {
         setTimeout(function () {
-            if (ResultatJeux[0] != 'rien' && ResultatJeux[1] != 'rien') {
-                if (ResultatJeux[0] === ResultatJeux[1]) {
-                    document.getElementById("titre").innerHTML="Egalité, ça craint !!";
-                    document.getElementById("droite").style.backgroundColor=document.getElementById("gauche").style.backgroundColor="red";
+
+
+
+
                 }
                 //Si les deux résultats sont identique, alors on affiche "Egalité,ça craint !!"
 
                 if (ResultatJeux[0] === 'ciseau' && ResultatJeux[1] === 'pierre') {
-                    document.getElementById("titre").innerHTML="La pierre défonce le ciseau";
-                    document.getElementById("gauche").style.backgroundColor="red";
-                    document.getElementById("droite").style.backgroundColor="green";
-                    document.getElementById("resultat-gauche").innerHTML="Perdu";
-                    document.getElementById("resultat-droite").innerHTML="Gagné";
+
+
+
+
+
                 }
                 //Si le résultat "ciseau" & "pierre" on affiche "pierre défonce les ciseaux", Rouge à gauche et vert à droite
 
                 if (ResultatJeux[0] === 'ciseau' && ResultatJeux[1] === 'feuille') {
-                    document.getElementById("titre").innerHTML="Le ciseau coupe la feuille";
-                    document.getElementById("gauche").style.backgroundColor="green";
-                    document.getElementById("droite").style.backgroundColor="red";
-                    document.getElementById("resultat-gauche").innerHTML="Gagné";
-                    document.getElementById("resultat-droite").innerHTML="Perdu";
+
+
+
+
+
                 }
 
                 if (ResultatJeux[0] === 'feuille' && ResultatJeux[1] === 'pierre') {
-                    document.getElementById("titre").innerHTML="La feuille enveloppe la pierre";
-                    document.getElementById("gauche").style.backgroundColor="green";
-                    document.getElementById("droite").style.backgroundColor="red";
-                    document.getElementById("resultat-gauche").innerHTML="Gagné";
-                    document.getElementById("resultat-droite").innerHTML="Perdu";
+
+
+
+
+
                 }
 
                 if (ResultatJeux[0] === 'feuille' && ResultatJeux[1] === 'ciseau') {
-                    document.getElementById("titre").innerHTML="Le ciseau coupe la feuille";
-                    document.getElementById("gauche").style.backgroundColor="red";
-                    document.getElementById("droite").style.backgroundColor="green";
-                    document.getElementById("resultat-gauche").innerHTML="Perdu";
-                    document.getElementById("resultat-droite").innerHTML="Gagné";
+
+
+
+
+
                 }
 
                 if (ResultatJeux[0] === 'pierre' && ResultatJeux[1] === 'feuille') {
-                    document.getElementById("titre").innerHTML="La feuille enveloppe la pierre";
-                    document.getElementById("gauche").style.backgroundColor="red";
-                    document.getElementById("droite").style.backgroundColor="green";
-                    document.getElementById("resultat-gauche").innerHTML="Perdu";
-                    document.getElementById("resultat-droite").innerHTML="Gagné";
+
+
+
+
+
                 }
 
                 if (ResultatJeux[0] === 'pierre' && ResultatJeux[1] === 'ciseau') {
-                    document.getElementById("titre").innerHTML="La pierre défonce le ciseau";
-                    document.getElementById("gauche").style.backgroundColor="green";
-                    document.getElementById("droite").style.backgroundColor="red";
-                    document.getElementById("resultat-gauche").innerHTML="Gagné";
-                    document.getElementById("resultat-droite").innerHTML="Perdu";
+
+
+
+
+
                 }
 
                 document.getElementById("rejouer").style.display="initial";
