--- a/Mon chifoumi.html
+++ b/Mon chifoumi.html
@@ -80,28 +80,22 @@
         document.getElementById("rejouer").style.display="none";
         document.getElementById("resultat-gauche").innerHTML="&nbsp;";
         document.getElementById("resultat-droite").innerHTML="&nbsp;";
-        ResultatJeux = ["Rien","Rien"]
-        chifoumi = ('pierre', 'feuille', 'ciseaux')
+        ResultatJeux = ["Rien","Rien"];
+        chifoumi = ('pierre', 'feuille', 'ciseaux');
         document.getElementById('image-gauche').style.pointerEvents = 'auto';
         document.getElementById('image-droite').style.pointerEvents = 'auto';
-        document.getElementById("gauche").style.backgroundColor=document.getElementById("droite").style.backgroundColor="#00ffd6"
-        document.getElementById('titre').innerHTML"Chifumi"
+        document.getElementById("gauche").style.backgroundColor=document.getElementById("droite").style.backgroundColor="#00ffd6";
+        document.getElementById('titre').innerHTML="Chifumi";
         document.getElementById("image-gauche").style.backgroundImage=document.getElementById("image-droite").style.backgroundImage="url(images-pfc/depart.jpg)";
     }
 
     function joueurGauche() {
-
-        //Variable qui fait un choix aléatoire (Math.random)
-
-        //Résultat du choix aléatoire
-
-        //Récupere l'image dans le dossier Image incluant le choix aléatoire au format jpg.
-
-        //On y applique le backgroundcolor noir
-
-        //On affiche le résultat venant du choix aléatoire
-
-        //Désactivation de l'événement cliquer à gauche
+        var ChoixAleatoire = Math.floor(Math.random()*chifoumi.length);
+        ResultatJeux[0] = chifoumi[ChoixAleatoire];
+        document.getElementById("image-gauche").style.backgroundImage="url(image-pfc/"+chifoumi[ChoixAleatoire]+".jpg;";
+        document.getElementById("gauche").style.backgroundColor="black";
+        document.getElementById("résultat-gauche").innerHTML=chifoumi[ChoixAleatoire];
+        document.getElementById('image-gauche').style.pointerEvents = 'none';
         checkGame();
     }
 
